--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="..//my-website/external/img/My-photo.png" style="width:100%" alt="Avatar">
+          <img src="https://raw.githubusercontent.com/axaymondal/axaymondal.github.io/619f7701fc05c7e10f4fb3c94ca0067c7496f978/external/img/My-photo.png" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>A K Mondal</h2>
           </div>
